added profile img and code

--- a/about.html
+++ b/about.html
@@ -30,16 +30,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#">ABOUT ME</a>
+            <a class="nav-link" href="./about.html">ABOUT ME</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">CONTACT</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="./contact.html">CONTACT</a>
           </li>
         </ul>
       </div>
@@ -47,14 +44,76 @@
   </header>
 
 
-  <div class="wrapper">
+  <div class="wrapper grey">
+    <h1>ABOUT ME</h1>
+    <img src="./img/profile.jpg" alt="Profile Pic" class="profile-pic">
+    <h5>JASMINE EBERY</h5>
+    <blockquote class="blockquote">
+      <p class="mb-0 mx-auto">" This is how you do it: You sit down at a keyboard
+        and you put one word after another until it is done.
+        It is that easy, and that hard."
+      </p>
+      <div class="blockquote-footer mt-2 ml-5 pl-5">Neil Gaiman</div>
+    </blockquote>
+    <div>
+      <button class="view"><a href="./files/resume.pdf">VIEW RESUME</a></button>
+    </div>
+    <div>
+      <button class="print"><a href="./files/resume.pdf">PRINT RESUME</a></button>
+    </div>
+    <h2>EDUCATION</h2>
+    <h4>Interactive Media Design, Algonquin College</h4>
+    <p>Ottawa ON Jan 2020 – Present</p>
+    <ul>
+      <li>Dean’s Honours List: GPA 4.0/4.0</li>
+      <li>Selected Coursework: Graphic Design (Adobe Illustrator, Adobe Photoshop), Responsive Web Design (HTML, CSS,
+        JavaScript), Content Management Systems (Wordpress, Drupal, Shopify), User Experience Design (Adobe XD,
+        InVision), Video Foundations (Adobe Premiere Pro, Adobe Audition), Introduction to JavaScript </li>
+    </ul>
+    <h4>Pre-Animation and Concept Art, Algonquin College</h4>
+    <p>Ottawa ON Sept, 2015 - Apr, 2016</p>
+    <ul>
+      <li>Dean’s Honours List: GPA 3.77/4.0</li>
+      <li>Selected Coursework: Layout Design, Character Design, Life Drawing, Photography</li>
+    </ul>
+    <h2>SKILLS</h2>
+    <p>Operating Systems: Windows 10, Mac OS
+      Software Tools: Wordpress, Drupal, Shopify, InVision, Adobe XD, Adobe Illustrator, Adobe Photoshop, Adobe Premiere
+      Pro, Adobe Audition
+    </p>
+    <ul>
+      <li>Used CMS to build a website; modified and enhanced functionality by installing themes and plugins</li>
+      <li>Created responsive low and high-fidelity website prototypes</li>
+      <li>Created vector graphics for different device sizes</li>
+      <li>Used industry standard software to produce and export short videos</li>
+    </ul>
+    <p> Web-Development Tools: HTML, CSS, JavaScript</p>
+    <ul>
+      <li>Created multi-page responsive websites</li>
+      <li>Created basic website structures using HTML and styled them using CSS</li>
+      <li>Built interactivity into websites and applications
+      </li>
+    </ul>
+    <h2>DAILY LIFE</h2>
+    <p>When I am not busy in school or working on homework I enjoy</p>
+    <ul>
+      <li>Reading: Fiction - Fantasy, Thrillers, Romance </li>
+      <li>Drawing: Digitally and mainly Fan-Art</li>
+      <li>Video Games: RPGs - Favourite game series is Dragon Age</li>
+      <li>Spending quality time with friends, family and my dog Apollo</li>
+    </ul>
+
+
+
+
+
 
 
   </div> <!-- wrapper div -->
 
   <footer>
     <nav>
-      <ul>
+      <ul class="footer-nav">
         <li><a href="#">HOME</a></li>
         <li><a href="#">ABOUT ME</a></li>
         <li><a href="./files/resume.pdf" target="_blank">RESUME</a></li>
@@ -74,7 +133,7 @@
     </nav>
   </footer>
   <div class="social">
-    <p>&copy; Jasmine Ebery, 2020</p>
+    <p class="copyright">&copy; Jasmine Ebery, 2020</p>
     <div id="social-icons">
       <i class="fab fa-instagram mr-1"></i>
       <i class="fab fa-facebook-square ml-1"></i>
