--- a/index.html
+++ b/index.html
@@ -30,16 +30,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">ABOUT ME</a>
+            <a class="nav-link" href="./about.html">ABOUT ME</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">CONTACT</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="./contact.html">CONTACT</a>
           </li>
         </ul>
       </div>
@@ -65,7 +62,7 @@
         <p class="mb-0 mx-auto">"Creativity is inventing, experimenting, growing, taking risks, breaking rules, making
           mistakes,
           and having fun."</p>
-        <footer class="blockquote-footer mt-2 ml-5 pl-5">Mary Lou Cook</footer>
+        <div class="blockquote-footer mt-2 ml-5 pl-5">Mary Lou Cook</div>
       </blockquote>
     </div>
 
@@ -79,13 +76,13 @@
         <li>Filming using a DSLR camera and editing short videos using Adobe Premiere Pro and Adobe Audition</li>
         <li>Designing responsive website prototypes in Adobe XD using UX/UI principles</li>
       </ul>
-      <button type="button" class="learn-more">LEARN MORE</button>
+      <button type="button" class="learn-more"><a href="./about.html">LEARN MORE</a></button>
     </div>
   </div> <!-- wrapper div -->
 
   <footer>
     <nav>
-      <ul>
+      <ul class="footer-nav">
         <li><a href="#">HOME</a></li>
         <li><a href="#">ABOUT ME</a></li>
         <li><a href="./files/resume.pdf" target="_blank">RESUME</a></li>
@@ -105,7 +102,7 @@
     </nav>
   </footer>
   <div class="social">
-    <p>&copy; Jasmine Ebery, 2020</p>
+    <p class="copyright">&copy; Jasmine Ebery, 2020</p>
     <div id="social-icons">
       <i class="fab fa-instagram mr-1"></i>
       <i class="fab fa-facebook-square ml-1"></i>
