--- a/contact.html
+++ b/contact.html
@@ -30,16 +30,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">ABOUT ME</a>
+            <a class="nav-link" href="./about.html">ABOUT ME</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#">CONTACT</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="./contact.html">CONTACT</a>
           </li>
         </ul>
       </div>
@@ -48,13 +45,48 @@
 
 
   <div class="wrapper">
+    <div class="wrapper blue">
+      <h1>CONTACT</h1>
+      <div class="info-grid">
+        <i class="fas fa-phone-alt"></i>
+        <p class="info number">819-592-6458</p>
+        <i class="fas fa-envelope-open-text"></i>
+        <p class="info email">jasmine.ebery@gmail.com</p>
+        <i class="fab fa-instagram"></i>
+        <p class="info instagram"><a href="www.instagram.com">instagram.com</a></p>
+        <i class="fab fa-facebook-square"></i>
+        <p class="info facebook"><a href="www.facebook.com">facebook.com</a></p>
+      </div>
+    </div>
 
-
+    <div class="contact-info">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque in officiis inventore ad! Nihil expedita
+        quasi, a voluptates voluptatum, debitis sit commodi placeat nostrum explicabo soluta itaque atque quisquam
+        reprehenderit?</p>
+    </div>
+    <div class="form">
+      <form>
+        <div class="form-group">
+          <label for="exampleFormControlInput1" class="label">Name</label>
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="First Last">
+        </div>
+        <div class="form-group">
+          <label for="exampleFormControlInput1" class="label">Email address</label>
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+        </div>
+        <div class="form-group">
+          <label for="exampleFormControlTextarea1" class="label"></label>
+          <textarea class="form-control" placeholder="Type Message" id="exampleFormControlTextarea1"
+            rows="3"></textarea>
+        </div>
+        <button type="submit" class="btn">SEND</button>
+      </form>
+    </div>
   </div> <!-- wrapper div -->
 
   <footer>
     <nav>
-      <ul>
+      <ul class="footer-nav">
         <li><a href="#">HOME</a></li>
         <li><a href="#">ABOUT ME</a></li>
         <li><a href="./files/resume.pdf" target="_blank">RESUME</a></li>
@@ -74,10 +106,10 @@
     </nav>
   </footer>
   <div class="social">
-    <p>&copy; Jasmine Ebery, 2020</p>
+    <p class="copyright">&copy; Jasmine Ebery, 2020</p>
     <div id="social-icons">
-      <i class="fab fa-instagram mr-1"></i>
-      <i class="fab fa-facebook-square ml-1"></i>
+      <i class="fab fa-instagram mr-1" id="footer-icons></i>
+      <i class=" fab fa-facebook-square ml-1" id="footer-icons"></i>
     </div>
   </div>
   <script src="https://kit.fontawesome.com/c6f7e77de3.js" crossorigin="anonymous"></script>
