started to code destop view

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 <body>
   <header id="top">
 
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-sm navbar-dark">
       <a class="navbar-brand" href="#"><img src="./icons/logo-bkg.jpg" width="50" height="50"
           class="d-inline-block align-top img-fluid pr-2" alt="logo">
         <h6>JASMINE EBERY DESIGNS</h6>
@@ -45,71 +45,81 @@
 
 
   <div class="wrapper">
-    <div class="wrapper blue">
-      <h1>CONTACT</h1>
-      <div class="info-grid">
-        <i class="fas fa-phone-alt"></i>
-        <p class="info number">819-592-6458</p>
-        <i class="fas fa-envelope-open-text"></i>
-        <p class="info email">jasmine.ebery@gmail.com</p>
-        <i class="fab fa-instagram"></i>
-        <p class="info instagram"><a href="www.instagram.com">instagram.com</a></p>
-        <i class="fab fa-facebook-square"></i>
-        <p class="info facebook"><a href="www.facebook.com">facebook.com</a></p>
+
+    <div class="blue">
+      <div class="icon-sec">
+        <h1>CONTACT</h1>
+        <div class="info-grid">
+          <i class="fas fa-phone-alt"></i>
+          <p class="info number">819-592-6458</p>
+          <i class="fas fa-envelope-open-text"></i>
+          <p class="info email">jasmine.ebery@gmail.com</p>
+          <i class="fab fa-instagram"></i>
+          <p class="info instagram"><a href="www.instagram.com">instagram.com</a></p>
+          <i class="fab fa-facebook-square"></i>
+          <p class="info facebook"><a href="www.facebook.com">facebook.com</a></p>
+        </div>
       </div>
     </div>
 
-    <div class="contact-info">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque in officiis inventore ad! Nihil expedita
-        quasi, a voluptates voluptatum, debitis sit commodi placeat nostrum explicabo soluta itaque atque quisquam
-        reprehenderit?</p>
-    </div>
-    <div class="form">
-      <form>
-        <div class="form-group">
-          <label for="exampleFormControlInput1" class="label">Name</label>
-          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="First Last">
-        </div>
-        <div class="form-group">
-          <label for="exampleFormControlInput1" class="label">Email address</label>
-          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-        </div>
-        <div class="form-group">
-          <label for="exampleFormControlTextarea1" class="label"></label>
-          <textarea class="form-control" placeholder="Type Message" id="exampleFormControlTextarea1"
-            rows="3"></textarea>
-        </div>
-        <button type="submit" class="btn">SEND</button>
-      </form>
+    <div class="contact-container">
+      <div class="contact-info">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque in officiis inventore ad! Nihil expedita
+          quasi, a voluptates voluptatum, debitis sit commodi placeat nostrum explicabo soluta itaque atque quisquam
+          reprehenderit?</p>
+      </div>
+      <div class="form">
+        <form>
+          <div class="form-group">
+            <label for="exampleFormControlInput1" class="label">Name</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="First Last">
+          </div>
+          <div class="form-group">
+            <label for="exampleFormControlInput1" class="label">Email address</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+          </div>
+          <div class="form-group">
+            <label for="exampleFormControlTextarea1" class="label"></label>
+            <textarea class="form-control" placeholder="Type Message" id="exampleFormControlTextarea1"
+              rows="3"></textarea>
+          </div>
+          <button type="submit" class="btn">SEND</button>
+        </form>
+      </div>
     </div>
   </div> <!-- wrapper div -->
 
-  <footer>
-    <nav>
-      <ul class="footer-nav">
-        <li><a href="#">HOME</a></li>
-        <li><a href="#">ABOUT ME</a></li>
-        <li><a href="./files/resume.pdf" target="_blank">RESUME</a></li>
-        <li><a href="#">PORTFOLIO</a></li>
-        <li><a href="#">CONTACT</a></li>
-        <a href="#top">
-          <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-up-square" fill="currentColor"
-            xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd"
-              d="M14 1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" />
-            <path fill-rule="evenodd"
-              d="M4.646 8.354a.5.5 0 0 0 .708 0L8 5.707l2.646 2.647a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 0 0 0 .708z" />
-            <path fill-rule="evenodd" d="M8 11.5a.5.5 0 0 0 .5-.5V6a.5.5 0 0 0-1 0v5a.5.5 0 0 0 .5.5z" />
-          </svg>
-        </a>
-      </ul>
-    </nav>
-  </footer>
-  <div class="social">
-    <p class="copyright">&copy; Jasmine Ebery, 2020</p>
-    <div id="social-icons">
-      <i class="fab fa-instagram mr-1" id="footer-icons></i>
-      <i class=" fab fa-facebook-square ml-1" id="footer-icons"></i>
+  <div class="footer-sec">
+    <footer>
+      <nav>
+        <ul class="footer-nav">
+          <li><a href="#">HOME</a></li>
+          <li><a href="#">ABOUT ME</a></li>
+          <li><a href="./files/resume.pdf" target="_blank">RESUME</a></li>
+          <li><a href="#">PORTFOLIO</a></li>
+          <li><a href="#">CONTACT</a></li>
+          <a href="#top">
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-up-square" fill="currentColor"
+              xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd"
+                d="M14 1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" />
+              <path fill-rule="evenodd"
+                d="M4.646 8.354a.5.5 0 0 0 .708 0L8 5.707l2.646 2.647a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 0 0 0 .708z" />
+              <path fill-rule="evenodd" d="M8 11.5a.5.5 0 0 0 .5-.5V6a.5.5 0 0 0-1 0v5a.5.5 0 0 0 .5.5z" />
+            </svg>
+          </a>
+        </ul>
+      </nav>
+    </footer>
+  </div>
+
+  <div class="social-sec">
+    <div class="social">
+      <p class="copyright">&copy; Jasmine Ebery, 2020</p>
+      <div id="social-icons">
+        <i class="fab fa-instagram mr-1 instagram-footer"></i>
+        <i class="fab fa-facebook-square ml-1 facebook-footer"></i>
+      </div>
     </div>
   </div>
   <script src="https://kit.fontawesome.com/c6f7e77de3.js" crossorigin="anonymous"></script>
