--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 <body>
   <header id="top">
 
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-sm navbar-dark">
       <a class="navbar-brand" href="#"><img src="./icons/logo-bkg.jpg" width="50" height="50"
           class="d-inline-block align-top img-fluid pr-2" alt="logo">
         <h6>JASMINE EBERY DESIGNS</h6>
@@ -43,100 +43,102 @@
     </nav>
   </header>
 
-
-  <div class="wrapper grey">
-    <h1>ABOUT ME</h1>
-    <img src="./img/profile.jpg" alt="Profile Pic" class="profile-pic">
-    <h5>JASMINE EBERY</h5>
-    <blockquote class="blockquote">
-      <p class="mb-0 mx-auto">" This is how you do it: You sit down at a keyboard
-        and you put one word after another until it is done.
-        It is that easy, and that hard."
+  <div class="main-container">
+    <div class="wrapper grey about-container">
+      <h1>ABOUT ME</h1>
+      <img src="./img/profile.jpg" alt="Profile Pic" class="profile-pic">
+      <h5>JASMINE EBERY</h5>
+      <blockquote class="blockquote neil-gaimen">
+        <p class="mb-0 mx-auto">" This is how you do it: You sit down at a keyboard
+          and you put one word after another until it is done.
+          It is that easy, and that hard."
+        </p>
+        <div class="blockquote-footer mt-2 ml-5 pl-5">Neil Gaiman</div>
+      </blockquote>
+      <div class="resume">
+        <div>
+          <button class="view"><a href="./files/resume.pdf">VIEW RESUME</a></button>
+        </div>
+        <div>
+          <button class="print"><a href="./files/resume.pdf">PRINT RESUME</a></button>
+        </div>
+      </div>
+      <h2>EDUCATION</h2>
+      <h4>Interactive Media Design, Algonquin College</h4>
+      <p>Ottawa ON Jan 2020 – Present</p>
+      <ul>
+        <li>Dean’s Honours List: GPA 4.0/4.0</li>
+        <li>Selected Coursework: Graphic Design (Adobe Illustrator, Adobe Photoshop), Responsive Web Design (HTML, CSS,
+          JavaScript), Content Management Systems (Wordpress, Drupal, Shopify), User Experience Design (Adobe XD,
+          InVision), Video Foundations (Adobe Premiere Pro, Adobe Audition), Introduction to JavaScript </li>
+      </ul>
+      <h4>Pre-Animation and Concept Art, Algonquin College</h4>
+      <p>Ottawa ON Sept, 2015 - Apr, 2016</p>
+      <ul>
+        <li>Dean’s Honours List: GPA 3.77/4.0</li>
+        <li>Selected Coursework: Layout Design, Character Design, Life Drawing, Photography</li>
+      </ul>
+      <h2>SKILLS</h2>
+      <p>Operating Systems: Windows 10, Mac OS
+        Software Tools: Wordpress, Drupal, Shopify, InVision, Adobe XD, Adobe Illustrator, Adobe Photoshop, Adobe
+        Premiere
+        Pro, Adobe Audition
       </p>
-      <div class="blockquote-footer mt-2 ml-5 pl-5">Neil Gaiman</div>
-    </blockquote>
-    <div>
-      <button class="view"><a href="./files/resume.pdf">VIEW RESUME</a></button>
+      <ul>
+        <li>Used CMS to build a website; modified and enhanced functionality by installing themes and plugins</li>
+        <li>Created responsive low and high-fidelity website prototypes</li>
+        <li>Created vector graphics for different device sizes</li>
+        <li>Used industry standard software to produce and export short videos</li>
+      </ul>
+      <p> Web-Development Tools: HTML, CSS, JavaScript</p>
+      <ul>
+        <li>Created multi-page responsive websites</li>
+        <li>Created basic website structures using HTML and styled them using CSS</li>
+        <li>Built interactivity into websites and applications
+        </li>
+      </ul>
+      <h2>DAILY LIFE</h2>
+      <p>When I am not busy in school or working on homework I enjoy</p>
+      <ul>
+        <li>Reading: Fiction - Fantasy, Thrillers, Romance </li>
+        <li>Drawing: Digitally and mainly Fan-Art</li>
+        <li>Video Games: RPGs - Favourite game series is Dragon Age</li>
+        <li>Spending quality time with friends, family and my dog Apollo</li>
+      </ul>
     </div>
-    <div>
-      <button class="print"><a href="./files/resume.pdf">PRINT RESUME</a></button>
-    </div>
-    <h2>EDUCATION</h2>
-    <h4>Interactive Media Design, Algonquin College</h4>
-    <p>Ottawa ON Jan 2020 – Present</p>
-    <ul>
-      <li>Dean’s Honours List: GPA 4.0/4.0</li>
-      <li>Selected Coursework: Graphic Design (Adobe Illustrator, Adobe Photoshop), Responsive Web Design (HTML, CSS,
-        JavaScript), Content Management Systems (Wordpress, Drupal, Shopify), User Experience Design (Adobe XD,
-        InVision), Video Foundations (Adobe Premiere Pro, Adobe Audition), Introduction to JavaScript </li>
-    </ul>
-    <h4>Pre-Animation and Concept Art, Algonquin College</h4>
-    <p>Ottawa ON Sept, 2015 - Apr, 2016</p>
-    <ul>
-      <li>Dean’s Honours List: GPA 3.77/4.0</li>
-      <li>Selected Coursework: Layout Design, Character Design, Life Drawing, Photography</li>
-    </ul>
-    <h2>SKILLS</h2>
-    <p>Operating Systems: Windows 10, Mac OS
-      Software Tools: Wordpress, Drupal, Shopify, InVision, Adobe XD, Adobe Illustrator, Adobe Photoshop, Adobe Premiere
-      Pro, Adobe Audition
-    </p>
-    <ul>
-      <li>Used CMS to build a website; modified and enhanced functionality by installing themes and plugins</li>
-      <li>Created responsive low and high-fidelity website prototypes</li>
-      <li>Created vector graphics for different device sizes</li>
-      <li>Used industry standard software to produce and export short videos</li>
-    </ul>
-    <p> Web-Development Tools: HTML, CSS, JavaScript</p>
-    <ul>
-      <li>Created multi-page responsive websites</li>
-      <li>Created basic website structures using HTML and styled them using CSS</li>
-      <li>Built interactivity into websites and applications
-      </li>
-    </ul>
-    <h2>DAILY LIFE</h2>
-    <p>When I am not busy in school or working on homework I enjoy</p>
-    <ul>
-      <li>Reading: Fiction - Fantasy, Thrillers, Romance </li>
-      <li>Drawing: Digitally and mainly Fan-Art</li>
-      <li>Video Games: RPGs - Favourite game series is Dragon Age</li>
-      <li>Spending quality time with friends, family and my dog Apollo</li>
-    </ul>
-
-
-
-
-
-
-
   </div> <!-- wrapper div -->
 
-  <footer>
-    <nav>
-      <ul class="footer-nav">
-        <li><a href="#">HOME</a></li>
-        <li><a href="#">ABOUT ME</a></li>
-        <li><a href="./files/resume.pdf" target="_blank">RESUME</a></li>
-        <li><a href="#">PORTFOLIO</a></li>
-        <li><a href="#">CONTACT</a></li>
-        <a href="#top">
-          <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-up-square" fill="currentColor"
-            xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd"
-              d="M14 1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" />
-            <path fill-rule="evenodd"
-              d="M4.646 8.354a.5.5 0 0 0 .708 0L8 5.707l2.646 2.647a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 0 0 0 .708z" />
-            <path fill-rule="evenodd" d="M8 11.5a.5.5 0 0 0 .5-.5V6a.5.5 0 0 0-1 0v5a.5.5 0 0 0 .5.5z" />
-          </svg>
-        </a>
-      </ul>
-    </nav>
-  </footer>
-  <div class="social">
-    <p class="copyright">&copy; Jasmine Ebery, 2020</p>
-    <div id="social-icons">
-      <i class="fab fa-instagram mr-1"></i>
-      <i class="fab fa-facebook-square ml-1"></i>
+  <div class="footer-sec">
+    <footer>
+      <nav>
+        <ul class="footer-nav">
+          <li><a href="#">HOME</a></li>
+          <li><a href="#">ABOUT ME</a></li>
+          <li><a href="./files/resume.pdf" target="_blank">RESUME</a></li>
+          <li><a href="#">PORTFOLIO</a></li>
+          <li><a href="#">CONTACT</a></li>
+          <a href="#top">
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-up-square" fill="currentColor"
+              xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd"
+                d="M14 1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" />
+              <path fill-rule="evenodd"
+                d="M4.646 8.354a.5.5 0 0 0 .708 0L8 5.707l2.646 2.647a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 0 0 0 .708z" />
+              <path fill-rule="evenodd" d="M8 11.5a.5.5 0 0 0 .5-.5V6a.5.5 0 0 0-1 0v5a.5.5 0 0 0 .5.5z" />
+            </svg>
+          </a>
+        </ul>
+      </nav>
+    </footer>
+  </div>
+
+  <div class="social-sec">
+    <div class="social">
+      <p class="copyright">&copy; Jasmine Ebery, 2020</p>
+      <div id="social-icons">
+        <i class="fab fa-instagram mr-1 instagram-footer"></i>
+        <i class="fab fa-facebook-square ml-1 facebook-footer"></i>
+      </div>
     </div>
   </div>
   <script src="https://kit.fontawesome.com/c6f7e77de3.js" crossorigin="anonymous"></script>
