--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <header id="top">
 
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-sm navbar-dark">
       <a class="navbar-brand" href="#"><img src="./icons/logo-bkg.jpg" width="50" height="50"
           class="d-inline-block align-top img-fluid pr-2" alt="logo">
         <h6>JASMINE EBERY DESIGNS</h6>
@@ -48,8 +48,8 @@
 
     <div class="head">
       <picture class="header-img">
-        <source srcset="./img/header-img-desktop.jpg" media="(min-width: 1400px)">
-        <source srcset="./img/header-img-tablet.jpg" media="(min-width: 560px)">
+        <source srcset="./img/header-img-desktop.jpg" media="(min-width: 960px)">
+        <source srcset="./img/header-img-tablet.jpg" media="(min-width: 576px)">
         <source srcset="./img/header-img-mobile.jpg" media="(min-width: 200px)">
         <img src="./img/header-img-desktop.jpg" alt="Header Image" class="img-fluid">
       </picture>
@@ -80,32 +80,37 @@
     </div>
   </div> <!-- wrapper div -->
 
-  <footer>
-    <nav>
-      <ul class="footer-nav">
-        <li><a href="#">HOME</a></li>
-        <li><a href="#">ABOUT ME</a></li>
-        <li><a href="./files/resume.pdf" target="_blank">RESUME</a></li>
-        <li><a href="#">PORTFOLIO</a></li>
-        <li><a href="#">CONTACT</a></li>
-        <a href="#top">
-          <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-up-square" fill="currentColor"
-            xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd"
-              d="M14 1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" />
-            <path fill-rule="evenodd"
-              d="M4.646 8.354a.5.5 0 0 0 .708 0L8 5.707l2.646 2.647a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 0 0 0 .708z" />
-            <path fill-rule="evenodd" d="M8 11.5a.5.5 0 0 0 .5-.5V6a.5.5 0 0 0-1 0v5a.5.5 0 0 0 .5.5z" />
-          </svg>
-        </a>
-      </ul>
-    </nav>
-  </footer>
-  <div class="social">
-    <p class="copyright">&copy; Jasmine Ebery, 2020</p>
-    <div id="social-icons">
-      <i class="fab fa-instagram mr-1"></i>
-      <i class="fab fa-facebook-square ml-1"></i>
+  <div class="footer-sec">
+    <footer>
+      <nav>
+        <ul class="footer-nav">
+          <li><a href="#">HOME</a></li>
+          <li><a href="#">ABOUT ME</a></li>
+          <li><a href="./files/resume.pdf" target="_blank">RESUME</a></li>
+          <li><a href="#">PORTFOLIO</a></li>
+          <li><a href="#">CONTACT</a></li>
+          <a href="#top">
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-up-square" fill="currentColor"
+              xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd"
+                d="M14 1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" />
+              <path fill-rule="evenodd"
+                d="M4.646 8.354a.5.5 0 0 0 .708 0L8 5.707l2.646 2.647a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 0 0 0 .708z" />
+              <path fill-rule="evenodd" d="M8 11.5a.5.5 0 0 0 .5-.5V6a.5.5 0 0 0-1 0v5a.5.5 0 0 0 .5.5z" />
+            </svg>
+          </a>
+        </ul>
+      </nav>
+    </footer>
+  </div>
+
+  <div class="social-sec">
+    <div class="social">
+      <p class=" copyright">&copy; Jasmine Ebery, 2020</p>
+      <div id="social-icons">
+        <i class="fab fa-instagram mr-1 instagram-footer"></i>
+        <i class="fab fa-facebook-square ml-1 facebook-footer"></i>
+      </div>
     </div>
   </div>
   <script src="https://kit.fontawesome.com/c6f7e77de3.js" crossorigin="anonymous"></script>
