--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
+        <ul class="nav navbar-nav justify-content-end">
           <li class="nav-item">
             <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
           </li>
@@ -47,67 +47,72 @@
   <div class="main-container">
     <div class="wrapper grey about-container">
       <h1>ABOUT ME</h1>
-      <img src="./img/profile.jpg" alt="Profile Pic" class="profile-pic">
-      <h5>JASMINE EBERY</h5>
-      <blockquote class="blockquote neil-gaimen">
-        <p class="mb-0 mx-auto">" This is how you do it: You sit down at a keyboard
-          and you put one word after another until it is done.
-          It is that easy, and that hard."
-        </p>
-        <div class="blockquote-footer mt-2 ml-5 pl-5">Neil Gaiman</div>
-      </blockquote>
-      <div class="resume">
-        <div>
-          <button class="view"><a href="./files/resume.pdf">VIEW RESUME</a></button>
-        </div>
-        <div>
-          <button class="print"><a href="./files/resume.pdf">PRINT RESUME</a></button>
+      <div class="section-1">
+        <img src="./img/profile.jpg" alt="Profile Pic" class="profile-pic">
+        <h5>JASMINE EBERY</h5>
+        <blockquote class="blockquote neil-gaimen">
+          <p class="mb-0 mx-auto">" This is how you do it: You sit down at a keyboard
+            and you put one word after another until it is done.
+            It is that easy, and that hard."
+          </p>
+          <div class="blockquote-footer mt-2 ml-5 pl-5">Neil Gaiman</div>
+        </blockquote>
+        <div class="resume">
+          <div>
+            <button class="view"><a href="./files/resume.pdf">VIEW RESUME</a></button>
+          </div>
+          <div>
+            <button class="print"><a href="./files/resume.pdf">PRINT RESUME</a></button>
+          </div>
         </div>
       </div>
-      <h2>EDUCATION</h2>
-      <h4>Interactive Media Design, Algonquin College</h4>
-      <p>Ottawa ON Jan 2020 – Present</p>
-      <ul>
-        <li>Dean’s Honours List: GPA 4.0/4.0</li>
-        <li>Selected Coursework: Graphic Design (Adobe Illustrator, Adobe Photoshop), Responsive Web Design (HTML, CSS,
-          JavaScript), Content Management Systems (Wordpress, Drupal, Shopify), User Experience Design (Adobe XD,
-          InVision), Video Foundations (Adobe Premiere Pro, Adobe Audition), Introduction to JavaScript </li>
-      </ul>
-      <h4>Pre-Animation and Concept Art, Algonquin College</h4>
-      <p>Ottawa ON Sept, 2015 - Apr, 2016</p>
-      <ul>
-        <li>Dean’s Honours List: GPA 3.77/4.0</li>
-        <li>Selected Coursework: Layout Design, Character Design, Life Drawing, Photography</li>
-      </ul>
-      <h2>SKILLS</h2>
-      <p>Operating Systems: Windows 10, Mac OS
-        Software Tools: Wordpress, Drupal, Shopify, InVision, Adobe XD, Adobe Illustrator, Adobe Photoshop, Adobe
-        Premiere
-        Pro, Adobe Audition
-      </p>
-      <ul>
-        <li>Used CMS to build a website; modified and enhanced functionality by installing themes and plugins</li>
-        <li>Created responsive low and high-fidelity website prototypes</li>
-        <li>Created vector graphics for different device sizes</li>
-        <li>Used industry standard software to produce and export short videos</li>
-      </ul>
-      <p> Web-Development Tools: HTML, CSS, JavaScript</p>
-      <ul>
-        <li>Created multi-page responsive websites</li>
-        <li>Created basic website structures using HTML and styled them using CSS</li>
-        <li>Built interactivity into websites and applications
-        </li>
-      </ul>
-      <h2>DAILY LIFE</h2>
-      <p>When I am not busy in school or working on homework I enjoy</p>
-      <ul>
-        <li>Reading: Fiction - Fantasy, Thrillers, Romance </li>
-        <li>Drawing: Digitally and mainly Fan-Art</li>
-        <li>Video Games: RPGs - Favourite game series is Dragon Age</li>
-        <li>Spending quality time with friends, family and my dog Apollo</li>
-      </ul>
+      <div class="section-2">
+        <h2>EDUCATION</h2>
+        <h4>Interactive Media Design, Algonquin College</h4>
+        <p>Ottawa ON Jan 2020 – Present</p>
+        <ul>
+          <li>Dean’s Honours List: GPA 4.0/4.0</li>
+          <li>Selected Coursework: Graphic Design (Adobe Illustrator, Adobe Photoshop), Responsive Web Design (HTML,
+            CSS,
+            JavaScript), Content Management Systems (Wordpress, Drupal, Shopify), User Experience Design (Adobe XD,
+            InVision), Video Foundations (Adobe Premiere Pro, Adobe Audition), Introduction to JavaScript </li>
+        </ul>
+        <h4>Pre-Animation and Concept Art, Algonquin College</h4>
+        <p>Ottawa ON Sept, 2015 - Apr, 2016</p>
+        <ul>
+          <li>Dean’s Honours List: GPA 3.77/4.0</li>
+          <li>Selected Coursework: Layout Design, Character Design, Life Drawing, Photography</li>
+        </ul>
+        <h2>SKILLS</h2>
+        <p>Operating Systems: Windows 10, Mac OS
+          Software Tools: Wordpress, Drupal, Shopify, InVision, Adobe XD, Adobe Illustrator, Adobe Photoshop, Adobe
+          Premiere
+          Pro, Adobe Audition
+        </p>
+        <ul>
+          <li>Used CMS to build a website; modified and enhanced functionality by installing themes and plugins</li>
+          <li>Created responsive low and high-fidelity website prototypes</li>
+          <li>Created vector graphics for different device sizes</li>
+          <li>Used industry standard software to produce and export short videos</li>
+        </ul>
+        <p> Web-Development Tools: HTML, CSS, JavaScript</p>
+        <ul>
+          <li>Created multi-page responsive websites</li>
+          <li>Created basic website structures using HTML and styled them using CSS</li>
+          <li>Built interactivity into websites and applications
+          </li>
+        </ul>
+        <h2>DAILY LIFE</h2>
+        <p>When I am not busy in school or working on homework I enjoy</p>
+        <ul>
+          <li>Reading: Fiction - Fantasy, Thrillers, Romance </li>
+          <li>Drawing: Digitally and mainly Fan-Art</li>
+          <li>Video Games: RPGs - Favourite game series is Dragon Age</li>
+          <li>Spending quality time with friends, family and my dog Apollo</li>
+        </ul>
+      </div>
     </div>
-  </div> <!-- wrapper div -->
+  </div>
 
   <div class="footer-sec">
     <footer>
