--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav justify-content-end">
           <li class="nav-item">
             <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
           </li>
