fixed some code

--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@
           <li><a href="#">HOME</a></li>
           <li><a href="#">ABOUT ME</a></li>
           <li><a href="./files/resume.pdf" target="_blank">RESUME</a></li>
-          <li><a href="#">PORTFOLIO</a></li>
+          <li><a href="./portfolio.html">PORTFOLIO</a></li>
           <li><a href="#">CONTACT</a></li>
           <a href="#top">
             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-up-square" fill="currentColor"
