--- a/index.html
+++ b/index.html
@@ -54,17 +54,20 @@
         <source srcset="./img/header-img-mobile.jpg" media="(min-width: 200px)">
         <img src="./img/header-img-desktop.jpg" alt="Header Image" class="img-fluid">
       </picture>
-      <button type="button" class="portfolio">VIEW PORTFOLIO</button>
+      <button type="button" class="portfolio"><a class="portfolio-link" href="./portfolio.html">VIEW
+          PORTFOLIO</a></button>
     </div>
 
-    <div class="quote">
-      <img src="./icons/logo.png" alt="logo" class="logo">
-      <blockquote class="blockquote">
-        <p class="mb-0 mx-auto">"Creativity is inventing, experimenting, growing, taking risks, breaking rules, making
-          mistakes,
-          and having fun."</p>
-        <div class="blockquote-footer mt-2 ml-5 pl-5">Mary Lou Cook</div>
-      </blockquote>
+    <div class="quote-section">
+      <div class="quote">
+        <img src="./icons/logo.png" alt="logo" class="logo">
+        <blockquote class="blockquote">
+          <p class="mb-0 mx-auto">"Creativity is inventing, experimenting, growing, taking risks, breaking rules, making
+            mistakes,
+            and having fun."</p>
+          <div class="blockquote-footer mt-2 ml-5 pl-5">Mary Lou Cook</div>
+        </blockquote>
+      </div>
     </div>
 
     <div class="about-sec">
@@ -88,7 +91,7 @@
           <li><a href="#">HOME</a></li>
           <li><a href="#">ABOUT ME</a></li>
           <li><a href="./files/resume.pdf" target="_blank">RESUME</a></li>
-          <li><a href="#">PORTFOLIO</a></li>
+          <li><a href="./portfolio.html">PORTFOLIO</a></li>
           <li><a href="#">CONTACT</a></li>
           <a href="#top">
             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-up-square" fill="currentColor"
