--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header id="top">
 
     <nav class="navbar navbar-expand-sm navbar-dark">
-      <a class="navbar-brand" href="#"><img src="./icons/logo-bkg.jpg" width="50" height="50"
+      <a class="navbar-brand d-flex align-items-center" href="#"><img src="./icons/logo-bkg.jpg" width="50" height="50"
           class="d-inline-block align-top img-fluid pr-2" alt="logo">
         <h6>JASMINE EBERY DESIGNS</h6>
       </a>
@@ -29,7 +29,7 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav justify-content-end">
+        <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
             <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
           </li>
