coding portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,9 @@
 
 
   <div class="wrapper">
-    <h1>PORTFOLIO</h1>
+    <div class="portfolio-head">
+      <h1>PORTFOLIO</h1>
+    </div>
     <div class="portfolio-grid">
       <img src="./img/ux-ui.jpg" alt="UX/UI" class=" img ux-ui">
       <img src="./img/happy-trails-01.jpg" alt="Happy Trails" class="img happy-trails">
