--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,8 @@
   <header id="top">
 
     <nav class="navbar navbar-expand-sm navbar-dark">
-      <a class="navbar-brand d-flex align-items-center" href="#"><img src="./icons/logo-bkg.jpg" width="50" height="50"
-          class="d-inline-block align-top img-fluid pr-2" alt="logo">
+      <a class="navbar-brand d-flex align-items-center" href="./index.html"><img src="./icons/logo-bkg.jpg" width="50"
+          height="50" class="d-inline-block align-top img-fluid pr-2" alt="logo">
         <h6>JASMINE EBERY DESIGNS</h6>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
